<resources>
    <string name="app_name">School App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="school_name">School name</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="school">School</string>
    <string name="events">Events</string>
    <string name="media">Media</string>
    <string name="noticeData">Notice</string>
    <string name="assignment">Assignment</string>
    <string name="syllabus">Syllabus</string>
    <string name="attendance">Attendance</string>
    <string name="exam_routine">Exam Routine</string>
    <string name="result">Result</string>
    <string name="homework">Homework</string>
    <string name="profile">Profile</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="date">Date</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="create_user">Create User</string>
    <string name="admin_login">Admin Login</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="studentName">Title</string>
    <string name="student_name">Student Name</string>
    <string name="class_name">Class</string>
    <string name="roll_no">Roll Number</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="student_password">Student Password</string>
    <string name="subject">Subject</string>
    <string name="exam_date">Exam Date</string>
    <string name="subject_name">Subject One</string>
    <string name="subject_name_second">Subject second (optional)</string>
    <string name="create">Create</string>
    <string name="create_teacher">Create Teacher</string>
    <string name="log_out">Log Out</string>
</resources>
