<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateNoticeActivity">

    <LinearLayout
        android:id="@+id/ll_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/studentName" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textLongMessage"
            android:minHeight="300dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_student_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher" />


        <EditText
            android:id="@+id/et_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name" />

        <EditText
            android:id="@+id/et_roll_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/roll_no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/et_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/class_name"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/student_password"
            android:inputType="text"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_exam_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Enter Date and Exam"
            android:textColor="@color/caldroid_black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_exam_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/exam_date" />

        <EditText
            android:id="@+id/et_first_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/subject_name"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/et_second_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/subject_name_second"
            android:inputType="textLongMessage" />

        <Button
            android:id="@+id/btn_exam_submit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>