<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreen_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TxtLableSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/school_name" />

    <TextView
        style="@style/TxtLableNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_normal"
        android:text="@string/login" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_normal"
        android:textSize="@dimen/textsize_normal" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_normal"
        android:textSize="@dimen/textsize_normal" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/admin"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/teacher"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/bLogin"
        style="@style/TxtLableSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_normal"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/margin_normal"
        android:layout_marginBottom="100dp"
        android:padding="@dimen/padding_normal"
        android:text="Forgot Password ?"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_user"
        android:textSize="18sp" />

</LinearLayout>