<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--module 1-->
        <LinearLayout
            android:id="@+id/llSchool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/school" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:text="@string/school" />
        </LinearLayout>
        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_marginTop="@dimen/margin_normalx"-->
        <!--android:layout_marginBottom="@dimen/margin_normalx"-->
        <!--/>-->

        <!--module 2-->
        <LinearLayout
            android:id="@+id/ll_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/events" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events" />
        </LinearLayout>
        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_marginTop="@dimen/margin_normalx"-->
        <!--android:layout_marginBottom="@dimen/margin_normalx"-->
        <!--/>-->

        <!--module 3-->
        <LinearLayout
            android:id="@+id/ll_holidays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/holiday" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Holidays" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_media"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/media" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:text="@string/media" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:weightSum="3">

        <!--module 1-->
        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_marginTop="@dimen/margin_normalx"-->
        <!--android:layout_marginBottom="@dimen/margin_normalx"-->
        <!--/>-->

        <!--module 2-->
        <LinearLayout
            android:id="@+id/ll_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/notice" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noticeData" />
        </LinearLayout>
        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_marginTop="@dimen/margin_normalx"-->
        <!--android:layout_marginBottom="@dimen/margin_normalx"-->
        <!--/>-->

        <!--module 3-->
        <LinearLayout
            android:id="@+id/ll_syllabus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/syllabus" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/syllabus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_assignment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/assignments" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:text="@string/assignment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_homework"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/exam_routine" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homework" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3">




        <LinearLayout
            android:id="@+id/ll_attendance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/attendance" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:weightSum="3">

        <!--module 1-->
        <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/result" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:text="@string/result" />
        </LinearLayout>
        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_marginTop="@dimen/margin_normalx"-->
        <!--android:layout_marginBottom="@dimen/margin_normalx"-->
        <!--android:visibility="invisible"-->
        <!--/>-->

        <!--module 2-->
        <LinearLayout
            android:id="@+id/ll_exam_routine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/exam_routine" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_routine" />
        </LinearLayout>
        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:visibility="invisible"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_marginTop="@dimen/margin_normalx"-->
        <!--android:layout_marginBottom="@dimen/margin_normalx"-->
        <!--/>-->

        <!--module 3-->
        <LinearLayout
            android:id="@+id/ll_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/attendance" />

            <TextView
                style="@style/TxtLableWhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>